--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "serve ./docs"
+    "docs": "echo 'Development mode started...' && cd ./docs && open ./index.html && npx tailwindcss -c ./tailwind.config.ts -i ./input.css -o ./output.css --watch"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/CQCL/quantinuum-ui#readme",
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "serve": "^14.2.1",
     "tailwindcss": "^3.3.6"
   }
