--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "docs": "echo 'Development mode started...' && cd ./docs && open ./index.html && npx tailwindcss -c ./tailwind.config.ts -i ./input.css -o ./output.css --watch"
+    "demo": "echo 'Demo dev mode started...' && cd ./demo && open ./index.html && npx tailwindcss -c ./tailwind.config.ts -i ./input.css -o ./output.css --watch"
   },
   "repository": {
     "type": "git",
