--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@storybook/test": "^7.6.5",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
+    "lucide-react": "^0.298.0",
     "postcss": "^8.4.32",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -51,7 +52,8 @@
     "serve": "^14.2.1",
     "storybook": "^7.6.5",
     "styled-components": "^6.1.1",
-    "tailwindcss": "^3.3.6"
+    "tailwindcss": "^3.3.6",
+    "zod": "^3.22.4"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
@@ -83,6 +85,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-table": "^8.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -90,7 +93,6 @@
     "react-day-picker": "^8.9.1",
     "react-hook-form": "^7.49.2",
     "tailwind-merge": "^2.1.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "tailwindcss-animate": "^1.0.7"
   }
 }
