--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,11 +14,8 @@ jobs:
       - name: Install NPM dependencies
         run: npm ci
 
-      - name: Build library
+      - name: Build library and storybook
         run: npm run build
-
-      - name: Build storybook
-        run: npm run build-storybook
 
       - name: Setup pages.
         uses: actions/configure-pages@v2
