--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm ci
 
       - name: Build library and storybook
-        run: npm run build
+        run: npm run build-lib && npm run build-storybook
 
       - name: Setup pages.
         uses: actions/configure-pages@v2
