--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "aidan.keay@quantinuum.com",
   "scripts": {
     "dev": "storybook dev -p 6006",
-    "build-storybook": "storybook-build",
+    "build-storybook": "storybook build",
     "build-lib": "rm -rf ./dist && rollup -c"
   },
   "release": {
