--- a/components.json
+++ b/components.json
@@ -4,7 +4,7 @@
   "rsc": true,
   "tsx": true,
   "tailwind": {
-    "config": "src/tailwind.config.ts",
+    "config": "tailwind.config.ts",
     "css": "src/globals.css",
     "baseColor": "zinc",
     "cssVariables": true
