--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
-  "module": "dist/src/index.js",
+  "module": "dist/index.js",
   "files": [
     "dist"
   ],
@@ -52,7 +52,7 @@
     "react-dom": "^18.2.0",
     "rollup": "^2.75.6",
     "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-dts": "^4.2.3",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-replace": "^2.2.0",
