--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "build-lib": "rm -rf ./dist && rollup -c"
+    "build": "rm -rf ./dist && rollup -c"
   },
   "release": {
     "branches": [
