--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
+  "files": [
+    "dist"
+  ],
+  "main": "dist/src/index.js",
   "exports": {
     ".": "./dist/src/index.js",
     "./tokens.css": "./dist/tokens.css"
