--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "files": [
     "dist"
   ],
+  "sideEffects": false,
   "main": "dist/src/index.js",
   "exports": {
     ".": "./dist/src/index.js",
