fix(): Attempt tree shaking improvements.

--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
   "files": [
     "dist"
   ],
-  "sideEffects": false,
+  "type": "module",
   "main": "dist/src/index.js",
   "exports": {
     ".": "./dist/src/index.js",
     "./tokens.css": "./dist/tokens.css"
   },
   "types": "./dist/types/src/index.d.ts",
+  "mode": "production",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/CQCL/quantinuum-ui.git"
