--- a/package.json
+++ b/package.json
@@ -53,8 +53,6 @@
     "lucide-react": "^0.298.0",
     "postcss": "^8.4.32",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "rollup": "^2.75.6",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-dts": "^4.2.3",
@@ -109,5 +107,9 @@
     "react-hook-form": "^7.49.2",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
