--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "@storybook/react-vite": "^7.6.5",
     "@storybook/test": "^7.6.5",
     "autoprefixer": "^10.4.16",
-    "lucide-react": "^0.298.0",
     "postcss": "^8.4.32",
     "prop-types": "^15.8.1",
     "rollup": "^2.75.6",
@@ -63,7 +62,6 @@
     "rollup-plugin-terser": "^7.0.2",
     "serve": "^14.2.1",
     "storybook": "^7.6.5",
-    "tailwindcss": "^3.3.6",
     "zod": "^3.22.4"
   },
   "dependencies": {
@@ -102,6 +100,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "lucide-react": "^0.298.0",
     "react-day-picker": "^8.9.1",
     "react-hook-form": "^7.49.2",
     "tailwind-merge": "^2.1.0",
@@ -109,6 +108,7 @@
   },
   "peerDependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.6"
   }
 }
