--- a/package.json
+++ b/package.json
@@ -94,7 +94,6 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-table": "^8.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -103,8 +102,7 @@
     "lucide-react": "^0.298.0",
     "react-day-picker": "^8.9.1",
     "react-hook-form": "^7.49.2",
-    "tailwind-merge": "^2.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^2.1.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
