--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@storybook/react": "^7.6.5",
     "@storybook/react-vite": "^7.6.5",
     "@storybook/test": "^7.6.5",
+    "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "prop-types": "^15.8.1",
@@ -62,6 +63,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "serve": "^14.2.1",
     "storybook": "^7.6.5",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "dependencies": {
@@ -107,6 +109,8 @@
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.6"
+    "tailwindcss": "^3.3.6",
+    "tailwindcss-animate": "^1.0.7",
+    "@tailwindcss/typography": "^0.5.10"
   }
 }
