--- a/package.json
+++ b/package.json
@@ -104,13 +104,14 @@
     "lucide-react": "^0.298.0",
     "react-day-picker": "^8.9.1",
     "react-hook-form": "^7.49.2",
+    "react-resizable-panels": "^1.0.5",
     "tailwind-merge": "^2.1.0"
   },
   "peerDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.6",
-    "tailwindcss-animate": "^1.0.7",
-    "@tailwindcss/typography": "^0.5.10"
+    "tailwindcss-animate": "^1.0.7"
   }
 }
