--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "serve": "^14.2.1",
+    "shadcn-ui": "^0.6.0",
     "storybook": "^7.6.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
