--- a/components.json
+++ b/components.json
@@ -10,7 +10,7 @@
     "cssVariables": true
   },
   "aliases": {
-    "components": "src/atoms",
+    "components": "src/shadcn",
     "utils": "src/utils"
   }
 }
