--- a/package.json
+++ b/package.json
@@ -103,9 +103,11 @@
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.298.0",
+    "next-themes": "^0.2.1",
     "react-day-picker": "^8.9.1",
     "react-hook-form": "^7.49.2",
     "react-resizable-panels": "^1.0.5",
+    "sonner": "^1.3.1",
     "tailwind-merge": "^2.1.0"
   },
   "peerDependencies": {
