--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
     "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "serve": "^14.2.1",
-    "shadcn-ui": "^0.6.0",
     "storybook": "^7.6.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
@@ -108,7 +107,8 @@
     "react-hook-form": "^7.49.2",
     "react-resizable-panels": "^1.0.5",
     "sonner": "^1.3.1",
-    "tailwind-merge": "^2.1.0"
+    "tailwind-merge": "^2.1.0",
+    "vaul": "^0.8.0"
   },
   "peerDependencies": {
     "@tailwindcss/typography": "^0.5.10",
