--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2",
+    "semantic-release": "^22.0.12",
     "serve": "^14.2.1",
     "storybook": "^7.6.5",
     "tailwindcss-animate": "^1.0.7",
