fix(): Attempt to publish under aidancq.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     ]
   },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/",
+    "registry": "https://registry.npmjs.org/aidancq",
     "tag": "latest"
   },
   "files": [
