--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "name": "Aidan Keay",
     "email": "aidan.keay@quantinuum.com"
   },
+  "sideEffects": false,
   "scripts": {
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
