--- a/package.json
+++ b/package.json
@@ -72,11 +72,9 @@
     "semantic-release": "^22.0.12",
     "serve": "^14.2.1",
     "storybook": "^7.6.5",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "tailwindcss-animate": "^1.0.7"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -113,17 +111,19 @@
     "lucide-react": "^0.298.0",
     "next-themes": "^0.2.1",
     "react-day-picker": "^8.9.1",
-    "react-hook-form": "^7.49.2",
     "react-resizable-panels": "^1.0.5",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.1.0",
-    "vaul": "^0.8.0"
+    "vaul": "^0.8.0",
+    "zod": "^3.22.4"
   },
   "peerDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@hookform/resolvers": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.6",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "react-hook-form": "^7.49.2"
   }
 }
