--- a/package.json
+++ b/package.json
@@ -118,12 +118,12 @@
     "zod": "^3.22.4"
   },
   "peerDependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@tailwindcss/typography": "^0.5.10",
-    "@hookform/resolvers": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "tailwindcss": "^3.3.6",
-    "tailwindcss-animate": "^1.0.7",
-    "react-hook-form": "^7.49.2"
+    "tailwindcss-animate": "^1.0.7"
   }
 }
