Multi select component.

--- a/package.json
+++ b/package.json
@@ -57,9 +57,11 @@
     "@storybook/react-vite": "^7.6.5",
     "@storybook/test": "^7.6.5",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/react-dom": "^18.2.22",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "prop-types": "^15.8.1",
+    "react-dom": "^18.2.0",
     "rollup": "^2.75.6",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-dts": "^4.2.3",
