--- a/package.json
+++ b/package.json
@@ -115,7 +115,6 @@
     "lucide-react": "^0.298.0",
     "next-themes": "^0.2.1",
     "react-day-picker": "^8.10.0",
-    "react-hook-form": "^7.50.1",
     "react-resizable-panels": "^1.0.5",
     "tailwind-merge": "^2.1.0",
     "vaul": "^0.8.0",
@@ -127,6 +126,7 @@
     "react-dom": "^18.2.0",
     "sonner": "^1.3.1",
     "tailwindcss": "^3.3.6",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "react-hook-form": "^7.50.1"
   }
 }
