--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.4",
+    
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -125,8 +125,9 @@
     "@tailwindcss/typography": "^0.5.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "tailwindcss": "^3.3.6",
     "tailwindcss-animate": "^1.0.7",
-    "react-hook-form": "^7.50.1"
+    "@hookform/resolvers": "^3.9.0"
   }
 }
