--- a/package.json
+++ b/package.json
@@ -78,7 +78,6 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "dependencies": {
-    
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -115,6 +114,7 @@
     "lucide-react": "^0.298.0",
     "next-themes": "^0.2.1",
     "react-day-picker": "^8.10.0",
+    "react-icons": "^5.2.1",
     "react-resizable-panels": "^1.0.5",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.1.0",
@@ -122,12 +122,12 @@
     "zod": "^3.22.4"
   },
   "peerDependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@tailwindcss/typography": "^0.5.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "tailwindcss": "^3.3.6",
-    "tailwindcss-animate": "^1.0.7",
-    "@hookform/resolvers": "^3.9.0"
+    "tailwindcss-animate": "^1.0.7"
   }
 }
