--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -10,18 +10,16 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install NPM dependencies
-        run: npm ci
-
-      - name: Build library
-        run: npm run build 
-
-      - name: Publish library to github packages and npm
+      - uses: actions/checkout@v4 
+      - uses: actions/setup-node@v4
+        with:
+            node-version: 20
+            cache: 'npm'
+      - run: npm ci
+      - run: npm run build 
+      - run: npx semantic-release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npx semantic-release
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
