--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "build": "rm -rf ./dist && rollup -c"
   },
   "release": {
-    "branches": [
-      "main"
-    ]
+    "branches":  ["main", { "name": "alpha", "prerelease": true}]
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org",
