--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "build": "rm -rf ./dist && rollup -c"
   },
   "release": {
-    "branches": [
-      "main"
-    ]
+    "branches":  ["main", { "name": "alpha", "prerelease": true}]
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org",
@@ -71,14 +69,13 @@
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "semantic-release": "^22.0.12",
+    "semantic-release": "^24.1.0",
     "serve": "^14.2.1",
     "sonner": "^1.4.1",
     "storybook": "^7.6.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "dependencies": {
-    
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -122,12 +119,12 @@
     "zod": "^3.22.4"
   },
   "peerDependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@tailwindcss/typography": "^0.5.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "tailwindcss": "^3.3.6",
-    "tailwindcss-animate": "^1.0.7",
-    "@hookform/resolvers": "^3.9.0"
+    "tailwindcss-animate": "^1.0.7"
   }
 }
