--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "build": "rm -rf ./dist && rollup -c"
   },
   "release": {
-    "branches":  ["main", { "name": "alpha", "prerelease": true}]
+    "branches": [
+      "main",
+      {
+        "name": "alpha",
+        "prerelease": true
+      }
+    ]
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org",
@@ -112,6 +118,7 @@
     "lucide-react": "^0.298.0",
     "next-themes": "^0.2.1",
     "react-day-picker": "^8.10.0",
+    "react-icons": "^5.3.0",
     "react-resizable-panels": "^1.0.5",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.1.0",
