--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "serve": "^14.2.1",
     "sonner": "^1.4.1",
     "storybook": "^7.6.5",
+    "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7"
   },
   "dependencies": {
