Add lint to ci.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,7 @@ jobs:
             node-version: 20
             cache: 'npm'
       - run: npm ci
+      - run: npm run lint
       - run: npm run build && npm run build-storybook
 
       - name: Upload artifact.
