--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -18,6 +18,7 @@ jobs:
             node-version: 20
             cache: 'npm'
       - run: npm ci
+      - run: npm run lint
       - run: npm run build 
       - run: npx semantic-release
         env:
