--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
+    "lint": "tsc",
     "build": "rm -rf ./dist && rollup -c"
   },
   "release": {
