feat(): pre-release

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
       {
         "name": "alpha",
         "prerelease": true
+      },
+      {
+        "name": "navbar",
+        "prerelease": true
       }
     ]
   },
