--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "prerelease": true
       },
       {
-        "name": "navbar",
+        "name": "prerelease_navbar",
         "prerelease": true
       }
     ]
