--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
   "peerDependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@tailwindcss/typography": "^0.5.10",
+    "next": "^14.2.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
