--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^3.6.0",
+    "input-otp": "^1.4.1",
     "lucide-react": "^0.298.0",
     "react-day-picker": "^8.10.0",
     "react-icons": "^5.3.0",
