--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "react-day-picker": "^8.10.0",
     "react-icons": "^5.3.0",
     "react-resizable-panels": "^1.0.5",
+    "recharts": "^2.15.0",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.1.0",
     "vaul": "^0.8.0",
