docs(): Update storybook to `v8`. (#40)
* Run update script.

* fix(): Add storybook plugin.

* fix(): Remove regex.

--- a/package.json
+++ b/package.json
@@ -53,18 +53,19 @@
   },
   "homepage": "https://github.com/CQCL/quantinuum-ui#readme",
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.3",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
     "@semantic-release/npm": "^11.0.2",
-    "@storybook/addon-essentials": "^7.6.5",
-    "@storybook/addon-interactions": "^7.6.5",
-    "@storybook/addon-links": "^7.6.5",
-    "@storybook/addon-onboarding": "^1.0.10",
-    "@storybook/blocks": "^7.6.5",
-    "@storybook/react": "^7.6.5",
-    "@storybook/react-vite": "^7.6.5",
-    "@storybook/test": "^7.6.5",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-links": "^8.4.7",
+    "@storybook/addon-onboarding": "^8.4.7",
+    "@storybook/blocks": "^8.4.7",
+    "@storybook/react": "^8.4.7",
+    "@storybook/react-vite": "^8.4.7",
+    "@storybook/test": "^8.4.7",
     "@tailwindcss/typography": "^0.5.15",
     "@types/react-dom": "^18.2.22",
     "autoprefixer": "^10.4.16",
@@ -83,7 +84,7 @@
     "semantic-release": "^24.1.0",
     "serve": "^14.2.1",
     "sonner": "^1.4.1",
-    "storybook": "^7.6.5",
+    "storybook": "^8.4.7",
     "tailwindcss-animate": "^1.0.7"
   },
   "dependencies": {
@@ -116,6 +117,7 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-table": "^8.11.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
