--- a/package.json
+++ b/package.json
@@ -129,7 +129,8 @@
     "react-resizable-panels": "^1.0.5",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.1.0",
-    "vaul": "^0.8.0"
+    "vaul": "^0.8.0",
+    "zod": "^3.24.1"
   },
   "peerDependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -139,7 +140,6 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "tailwindcss": "^3.4.15",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "tailwindcss-animate": "^1.0.7"
   }
 }
