--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "prerelease": true
       },
       {
-        "name": "dest",
+        "name": "dest2",
         "prerelease": true
       }
     ]
