--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cqcl/quantinuum-ui",
+  "name": "@quantinuum/quantinuum-ui",
   "version": "1.0.0",
   "description": "Quantinuum design system.",
   "private": false,
