--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "prerelease": true
       },
       {
-        "name": "select",
+        "name": "radix-update",
         "prerelease": true
       }
     ]
