enable prerelease by setting prerelease name to PR title

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "prerelease": true
       },
       {
-        "name": "navbar2",
+        "name": "navbar2_content_update",
         "prerelease": true
       }
     ]
