--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "prerelease": true
       },
       {
-        "name": "navbar-content",
+        "name": "update-systems",
         "prerelease": true
       }
     ]
