--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@storybook/react-vite": "^8.4.7",
     "@storybook/test": "^8.4.7",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/luxon": "^3.4.2",
     "@types/react-dom": "^18.2.22",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
@@ -128,6 +129,7 @@
     "date-fns": "^3.6.0",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
+    "luxon": "^3.5.0",
     "react-day-picker": "^8.10.0",
     "react-icons": "^5.3.0",
     "react-resizable-panels": "^1.0.5",
