--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
       {
         "name": "update-systems",
         "prerelease": true
+      },
+      {
+        "name": "update-sonner",
+        "prerelease": true
       }
     ]
   },
