--- a/package.json
+++ b/package.json
@@ -141,7 +141,7 @@
   "peerDependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@tailwindcss/typography": "^0.5.15",
-    "next": "^14.2.16",
+    "next": ">=14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
