--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
       {
         "name": "update-sonner",
         "prerelease": true
+      },
+       {
+        "name": "nextjs-peer-requirement-2",
+        "prerelease": true
       }
     ]
   },
