--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   },
   "release": {
     "branches": [
-      "main"
+      "main",
+      {
+        "name": "remove-unused-components",
+        "prerelease": true
+      }
     ]
   },
   "publishConfig": {
@@ -78,12 +82,8 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-aspect-ratio": "^1.0.3",
-    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-hover-card": "^1.0.7",
@@ -94,14 +94,12 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
@@ -115,10 +113,8 @@
     "lucide-react": "^0.468.0",
     "react-day-picker": "^8.10.0",
     "react-icons": "^5.3.0",
-    "react-resizable-panels": "^1.0.5",
     "semantic-release": "^24.2.5",
     "tailwind-merge": "^2.6.0",
-    "vaul": "^0.8.0",
     "zod": "^3.25.56"
   },
   "peerDependencies": {
