--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "dist"
   ],
   "type": "module",
-    "main": "./dist/index.js",
+  "main": "dist/src/index.js",
   "exports": {
-    ".": "./dist/index.js",
+    ".": "./dist/src/index.js",
     "./tokens.css": "./dist/tokens.css"
   },
   "types": "./dist/src/index.d.ts",
