--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
     "dist"
   ],
   "type": "module",
-  "main": "dist/src/index.js",
+  "main": "dist/index.js",
   "exports": {
-    ".": "./dist/src/index.js",
+    ".": "./dist/index.js",
     "./tokens.css": "./dist/tokens.css"
   },
-  "types": "./dist/src/index.d.ts",
+  "types": "./dist/types/src/index.d.ts",
   "mode": "production",
   "repository": {
     "type": "git",
