--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
       {
         "name": "remove-unused-components",
         "prerelease": true
+      },
+      {
+        "name": "downgrade-react-avatar",
+        "prerelease": true
       }
     ]
   },
@@ -82,7 +86,7 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
