--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
     "dist"
   ],
   "type": "module",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
   "exports": {
     ".": {
       "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
     },
     "./tokens.css": "./dist/tokens.css"
   },
