--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "dist"
   ],
   "type": "module",
-  "main": "dist/src/index.js",
+  "main": "./dist/src/index.js",
   "exports": {
     ".": {
       "import": "./dist/src/index.js",
-      "types": "./dist/src/index.d.ts",
+      "types": "./dist/types/src/index.d.ts",
       "default": "./dist/src/index.js"
     },
     "./tokens.css": "./dist/tokens.css"
