feat: Create tailwind class manifest at build time. (#74)
* refactor: simpler build

* fix: branch name

* fix: exports.

* fix: revert

* fix: paths

* fix: try sourcemap.

* fix: Emit ts declaration as one file.

* fix: build config

* fix: exports

* fix: Simplify.

* fix: Simplify.

* feat: create tailwind manifest file

* fix: exports.

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
         "name": "remove-unused-components",
         "prerelease": true
       },
-      {
-        "name": "downgrade-react-avatar",
+    {
+        "name": "refactor-simpler-build",
         "prerelease": true
       }
     ]
@@ -36,9 +36,13 @@
     "dist"
   ],
   "type": "module",
-  "main": "dist/src/index.js",
+  "main": "./dist/src/index.js",
   "exports": {
-    ".": "./dist/src/index.js",
+    ".": {
+      "import": "./dist/src/index.js",
+      "types": "./dist/types/src/index.d.ts",
+      "default": "./dist/src/index.js"
+    },
     "./tokens.css": "./dist/tokens.css"
   },
   "types": "./dist/types/src/index.d.ts",
