--- a/package.json
+++ b/package.json
@@ -69,12 +69,12 @@
     "@storybook/react": "^8.4.7",
     "@storybook/react-vite": "^8.4.7",
     "@storybook/test": "^8.4.7",
-    "@tailwindcss/typography": "^0.5.15",
     "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.16",
+    "date-fns": "^3.6.0",
     "postcss": "^8.4.32",
     "prop-types": "^15.8.1",
-    "react-dom": "^18.2.0",
     "rollup": "^2.79.2",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-dts": "^4.2.3",
@@ -84,9 +84,8 @@
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "sonner": "^2.0.1",
-    "storybook": "^8.6.14",
-    "tailwindcss-animate": "^1.0.7"
+    "semantic-release": "^24.2.5",
+    "storybook": "^8.6.14"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
@@ -111,28 +110,26 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@tanstack/react-table": "^8.11.0",
-    "@vitejs/plugin-react": "^4.3.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.0",
-    "date-fns": "^3.6.0",
     "input-otp": "^1.4.1",
-    "lucide-react": "^0.468.0",
     "react-day-picker": "^8.10.0",
-    "react-icons": "^5.3.0",
-    "semantic-release": "^24.2.5",
-    "tailwind-merge": "^2.6.0",
-    "zod": "^3.25.56"
+    "sonner": "^2.0.1",
+    "tailwind-merge": "^2.6.0"
   },
   "peerDependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@tanstack/react-table": "^8.11.0",
+    "lucide-react": "^0.468.0",
     "next": ">=13.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-icons": "^5.3.0",
     "tailwindcss": "^3.4.15",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.25.56"
   }
 }
