--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "prerelease": true
       },
     {
-        "name": "refactor-simpler-build",
+        "name": "fix-move-deps",
         "prerelease": true
       }
     ]
