--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,11 @@
-name: Release library
+name: Release Lib & Deploy Storybook Site
 on:
   push:
     branches:
       - main
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+
 permissions:
   contents: write
   pages: write
@@ -12,33 +13,43 @@ permissions:
   id-token: write
 
 jobs:
-  release:
+  release-lib:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
         with:
-            node-version: 20
-            cache: 'npm'
+          node-version: 20
+          cache: 'npm'
+
       - run: npm ci
       - run: npm run lint
       - run: npm run build
-
 
       - run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-
       - name: Build storybook site
-      - run: npm run build-storybook
+        id: build
+        run: npm run build-storybook
 
       - name: Upload static files as artifact
-        uses: actions/upload-pages-artifact@v4
+        id: deployment
+        uses: actions/upload-pages-artifact@v3 # or specific "vX.X.X" version tag for this action
         with:
           path: storybook-static/
 
-      - name: Publish storybook build to github pages
+  deploy-site:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
