--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "name": "remove-unused-components",
         "prerelease": true
       },
-    {
+      {
         "name": "refactor-simpler-build",
         "prerelease": true
       },
@@ -61,18 +61,13 @@
   },
   "homepage": "https://github.com/CQCL/quantinuum-ui#readme",
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.6",
+    "@chromatic-com/storybook": "^4.1.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
-    "@storybook/addon-essentials": "^8.4.7",
-    "@storybook/addon-interactions": "^8.4.7",
-    "@storybook/addon-links": "^8.4.7",
-    "@storybook/addon-onboarding": "^8.4.7",
-    "@storybook/blocks": "^8.4.7",
-    "@storybook/react": "^8.4.7",
-    "@storybook/react-vite": "^8.4.7",
-    "@storybook/test": "^8.4.7",
+    "@storybook/addon-links": "^9.1.10",
+    "@storybook/addon-onboarding": "^9.1.10",
+    "@storybook/react-vite": "^9.1.10",
     "@tailwindcss/typography": "^0.5.15",
     "@types/react-dom": "^18.2.22",
     "autoprefixer": "^10.4.16",
@@ -89,8 +84,9 @@
     "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "sonner": "^2.0.1",
-    "storybook": "^8.6.14",
-    "tailwindcss-animate": "^1.0.7"
+    "storybook": "^9.1.10",
+    "tailwindcss-animate": "^1.0.7",
+    "@storybook/addon-docs": "^9.1.10"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
