NRP-2182:chore:update packagejson

--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
       {
         "name": "dark-mode-selector-css",
         "prerelease": true
+      },
+      {
+        "name": "toaster-restrict-width",
+        "prerelease": true
       }
     ]
   },
