fix: worklow and semantic release config.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
       "main",
       {
         "name": "*",
-        "prerelease": "${name}"
+        "prerelease": true
       }
     ],
     "plugins": [
