--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -1,9 +1,7 @@
 name: Pre Release library
 on:
-  push:
+  pull_request:
     branches:
-        - '*'         # matches every branch that doesn't contain a '/'
-        - '*/*'       # matches every branch containing a single '/'
         - '**'        # matches every branch
         - '!main'   # excludes main
 
