fix: Ignore main explicitly.

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -1,9 +1,8 @@
 name: Pre Release library
 on:
   pull_request:
-    branches:
-        - '**'        # matches every branch
-        - '!main'   # excludes main
+    branches-ignore:
+      - main
 
 jobs:
   release:
