test: NRP-2403: pre-release

--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
       {
         "name": "dark-mode-selector-css",
         "prerelease": true
+      },
+      {
+        "name": "NRP-2403-dialog-enhancements",
+        "prerelease": true
       }
     ]
   },
