test: NRP-2403: Dialog enhancements (#98)
* test: NRP-2403: pre-release

* feat: NRP-2403: non dismissable dialog

* feat: NRP-2403: bottom dialog and visible background

* feat: NRP-2403: bottom dialog black background

* chore: NRP-2403: remove prop and make universally the overlays to be dark instead of white

* fix: NRP-2403: remove prop

* fix: NRP-2403: black 40

* docs: Add statefulness to dialog story.

* chore: NRP-2403: update storybook

---------

Co-authored-by: Aidan <104831665+aidanCQ@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -16,19 +16,7 @@
   },
   "release": {
     "branches": [
-      "main",
-      {
-        "name": "remove-unused-components",
-        "prerelease": true
-      },
-      {
-        "name": "refactor-simpler-build",
-        "prerelease": true
-      },
-      {
-        "name": "dark-mode-selector-css",
-        "prerelease": true
-      }
+      "main"
     ]
   },
   "publishConfig": {
